--- a/style.css
+++ b/style.css
@@ -125,7 +125,7 @@ span {
   margin-left: 15%;
   max-width: 60%;
   padding: 5%;
-  background-image: url(/Flower-Asset/cover.png);
+  background-image: url(./Flower-Asset/cover.png);
 }
 /*****/
 .last-sec{
